#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psana_examples
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-15
2013-03-28 Andy Salnikov
- small improvements in DumpAcqiris

Tag: V00-03-14
2013-03-27 Andy Salnikov
- DumpEpics now prints list of aliases in beginCalibCycle()

Tag: V00-03-13
2013-03-27 Andy Salnikov
- dump more info for cspad and cspad2x2

Tag: V00-03-12
2013-03-25 Andy Salnikov
- DumpPrinceton: convert some values to integers before printing

Tag: V00-03-11
2013-03-24 Andy Salnikov
- DumpEncoder: added ConfigV2

Tag: V00-03-10
2013-03-23 Andy Salnikov
- small update to DumpFccd

Tag: V00-03-09
2013-03-22 Andy Salnikov
- small update to DumpFli

Tag: V00-03-08
2013-03-22 Andy Salnikov
- add new module DumpGsc16ai

Tag: V00-03-07
2013-03-22 Andy Salnikov
- add new module DumpOceanOptics

Tag: V00-03-06
2013-03-22 Andy Salnikov
- in DumpUsdUsb print status info 

Tag: V00-03-05
2013-03-21 Andy Salnikov
- fix default source string in DumpUsdUsb module

Tag: V00-03-04
2013-02-26 Andy Salnikov
- update SumpScPad for a small change in Convig classes interfaces

Tag: V00-03-03
2013-02-05 Andy Salnikov
- added few more modules for new classes and update existing modules

Tag: V00-03-02
2013-02-04 Andy Salnikov
- Ipimb::Config::diodeGain() method was renamed to capacitorValue, fixing
  the code which used it

Tag: V00-03-01
2013-01-30 Andy Salnikov
- removed unnecessary .get() on smart pointers

Tag: V00-03-00
2013-01-30 Andy Salnikov
- switching to const ndarrays for array data
- ndarray has operator<<(ostream) now, use it do dump array data

Tag: V00-02-16
2012-11-28 Andy Salnikov
- change in Source constructor

Tag: V00-02-15
2012-11-15 Andy Salnikov